# text_objects_extraction

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  data.dvc  docker-compose.yaml  pyproject.toml
.dvc/: config
configs/: app_settings.yaml  bert_extractor_settings.yaml  dall_e_settings.yaml  extractor_client_settings.yaml  llm_extractor_settings.yaml
k8s/: backend.yaml  frontend.yaml  ingress.yaml  pvc.yaml
notebooks/: get_metrics.ipynb
src/: fastapi_app.py
src/core/: models.py  settings.py
src/data/: utils.py
src/dependencies/: __init__.py  extractors.py  settings.py
src/endpoints/: extract_objects.py
src/extractor/: __init__.py  base.py  bert_extractor.py  client.py  llm_extractor.py  pos_extractor.py
src/frontend/: streamlit_app.py
src/image_generator/: __init__.py  dalle_generator.py
src/metrics/: __init__.py  rouge_like.py
